--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+    <script defer src="./assets/login.js"></script>
 </head>
 
 <body>
@@ -28,12 +29,14 @@
         <section class="login">
             <h2>Log In</h2>
 
-            <form>
+            <form id="login-form">
                 <label for="email">E-mail</label>
-                <input id="email" name="email" type="email" autocomplete="email">
+                <input id="email" name="email" type="email" autocomplete="email" required>
 
                 <label for="password">Mot de passe</label>
-                <input id="password" name="password" type="password" autocomplete="current-password">
+                <input id="password" name="password" type="password" autocomplete="current-password" required>
+
+                <p class="login-error"></p>
 
                 <button type="submit">Se connecter</button>
             </form>
